--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "gatsby-image": "^2.0.41",
     "gatsby-plugin-emotion": "^4.1.16",
     "gatsby-plugin-google-fonts": "^1.0.1",
+    "gatsby-plugin-netlify-headers": "^1.0.1",
     "gatsby-plugin-react-leaflet": "^2.0.11",
     "gatsby-plugin-sharp": "^2.4.5",
     "gatsby-plugin-theme-ui": "^0.2.43",
