--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "dependencies": {
     "@mdx-js/react": "^1.5.7",
     "@theme-ui/components": "^0.2.50",
+    "@theme-ui/match-media": "^0.3.1",
     "gatsby-background-image": "^0.9.11",
     "gatsby-image": "^2.0.41",
     "gatsby-plugin-google-fonts": "^1.0.1",
