added favicon, sitemap, google tag manager, tawk.to, robots.txt, netlify redirects file

--- a/package.json
+++ b/package.json
@@ -38,10 +38,16 @@
     "@theme-ui/match-media": "^0.3.1",
     "gatsby-background-image": "^0.9.11",
     "gatsby-image": "^2.0.41",
+    "gatsby-plugin-google-analytics": "^2.1.36",
     "gatsby-plugin-google-fonts": "^1.0.1",
+    "gatsby-plugin-google-tagmanager": "^2.1.25",
+    "gatsby-plugin-manifest": "^2.2.42",
     "gatsby-plugin-netlify-headers": "^1.0.1",
     "gatsby-plugin-react-leaflet": "^2.0.11",
+    "gatsby-plugin-robots-txt": "^1.5.0",
     "gatsby-plugin-sharp": "^2.4.5",
+    "gatsby-plugin-sitemap": "^2.2.27",
+    "gatsby-plugin-tawk": "^1.0.0",
     "gatsby-plugin-theme-ui": "^0.2.43",
     "gatsby-source-filesystem": "^2.1.40",
     "gatsby-theme-style-guide": "^0.2.49",
