--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,11 @@ yarn.lock
 
 # Secrets
 .env.development
+/.idea/.gitignore
+/.idea/codeStyles/codeStyleConfig.xml
+/.idea/lrw-web.iml
+/.idea/misc.xml
+/.idea/modules.xml
+/.idea/codeStyles/Project.xml
+/.idea/inspectionProfiles/Project_Default.xml
+/.idea/vcs.xml
