added serializer vor Vimeo videos

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@mdx-js/react": "^1.5.7",
     "@theme-ui/components": "^0.2.50",
     "@theme-ui/match-media": "^0.3.1",
+    "@u-wave/react-vimeo": "^0.9.1",
     "gatsby-background-image": "^0.9.11",
     "gatsby-image": "^2.0.41",
     "gatsby-plugin-google-analytics": "^2.1.36",
@@ -52,6 +53,7 @@
     "gatsby-source-filesystem": "^2.1.40",
     "gatsby-theme-style-guide": "^0.2.49",
     "gatsby-transformer-sharp": "^2.3.7",
+    "get-video-id": "^3.1.5",
     "get-youtube-id": "^1.0.1",
     "is-absolute-url": "^3.0.3",
     "leaflet": "^1.6.0",
