--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@u-wave/react-vimeo": "^0.9.1",
     "gatsby-background-image": "^0.9.11",
     "gatsby-image": "^2.0.41",
+    "gatsby-plugin-facebook-pixel": "^1.0.5",
     "gatsby-plugin-google-analytics": "^2.1.36",
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-google-tagmanager": "^2.1.25",
